--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
 
 
         </activity>
-    </application>
+        <receiver android:name=".nr" android:exported="false">
+            <intent-filter>
+                <action android:name="nr"/>
 
-</manifest>
+            </intent-filter>
+
+
+        </receiver>
+    </application>
+  </manifest>
